force-app/main/default/objects/FW_DisableErrorLogging__c/FW_DisableErrorLogging__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Determines if error log publishing is disabled</description>
    <label>Disable Error Logging</label>
</CustomObject>