force-app/main/default/objects/FW_DisableErrorLogging__c/fields/CalloutException__c.field-meta.xml
<CustomField>
    <fullName>CalloutException__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true not to log callout exceptions</description>
    <label>CalloutException</label>
    <type>Checkbox</type>
</CustomField>