force-app/main/default/objects/FW_DisableErrorLogging__c/fields/QueryException__c.field-meta.xml
<CustomField>
    <fullName>QueryException__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to true to skip query exceptions</description>
    <label>QueryException</label>
    <type>Checkbox</type>
</CustomField>